--- a/travauxPG/ProtoBuf/dataServer3D/pom.xml
+++ b/travauxPG/ProtoBuf/dataServer3D/pom.xml
@@ -21,5 +21,31 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+
+    <!-- protobuf -->
+    <dependency>
+      <groupId>com.google.protobuf</groupId>
+      <artifactId>protobuf-java</artifactId>
+      <version>3.3.0</version>
+    </dependency>
+
+    <!-- MQ -->
+    <dependency>
+      <groupId>com.zzx</groupId>
+      <artifactId>ancient-client</artifactId>
+      <version>0.9.8-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>com.zzx</groupId>
+      <artifactId>ancient-commons</artifactId>
+      <version>0.9.8-SNAPSHOT</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.apache.commons</groupId>
+          <artifactId>commons-lang3</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
   </dependencies>
+
 </project>
