--- a/travauxPG/ProtoBuf/dataServer3D/pom.xml
+++ b/travauxPG/ProtoBuf/dataServer3D/pom.xml
@@ -29,6 +29,13 @@
       <version>3.3.0</version>
     </dependency>
 
+    <!-- MySQL -->
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>5.1.31</version>
+    </dependency>
+
     <!-- MQ -->
     <dependency>
       <groupId>com.zzx</groupId>
